# sentinel

./: .gitignore  README.md  start-sentinel.ps1
shared/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_key.rs  capture.rs  context.rs  llm.rs  main.rs  types.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  styles.css
