[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
image = { version = "0.25.5", default-features = false, features = ["png"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tauri = { version = "2.1.1", features = [] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
screenshots = "0.8.10"
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
